# peerislands-assignment

./: .gitignore  README.md  config.py  git_cloner.py  java_parser.py  knowledge_structurer.py  llm_service.py  logger.py  main.py  pyproject.toml  repository_scanner.py  structured_knowledge.json  vector_store.py
